--- a/geothermalsite/dashboard/templates/dashboard/tempvstime.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvstime.html
@@ -1,5 +1,6 @@
 {% load static %}
 
+<link rel="stylesheet" href="{% static 'css/generalSiteStyles.css' %}">
 <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
@@ -10,10 +11,11 @@
 <!-- Graph code and canvas for housing the graph -->
 <script src="{% static 'js/graphs/tempVsTimeGraph.js' %}" type="module"></script>
 <div class="container">
+    <div class="viewer">
     <canvas id="ctx"></canvas>
+    <!-- Buttons for downloading the data as a CSV and the graph as an image -->
+    <script src="{% static 'js/utils/createCsv.js' %}"></script>
+    <button onclick="downloadData('tempvstime')">Download data</button>
+    <button id="downloadImage" onclick="window.downloadGraphImage('tempvstime')">Download graph</button>
+    </div>
 </div>
-
-<!-- Buttons for downloading the data as a CSV and the graph as an image -->
-<script src="{% static 'js/utils/createCsv.js' %}"></script>
-<button onclick="downloadData('tempvstime')">Download data</button>
-<button id="downloadImage" onclick="window.downloadGraphImage('tempvstime')">Download graph</button>
