--- a/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
@@ -1,4 +1,5 @@
 {% load static %}
+<link rel="stylesheet" href="{% static 'css/generalSiteStyles.css' %}">
 
 <!--daterangepicker package files-->
 <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
@@ -8,10 +9,11 @@
 <!-- Graph code and canvas for housing the graph -->
 <script src="{% static 'js/graphs/tempVsDepthGraph.js' %}" type="module"></script>
 <div class="container">
+    <div class="viewer">
     <canvas id="ctx"></canvas>
+    <!-- Buttons for downloading the data as a CSV and the graph as an image -->
+    <script src="{% static 'js/utils/createCsv.js' %}"></script>
+    <button onclick="downloadData('tempvsdepth')">Download data</button>
+    <button id="downloadImage" onclick="window.downloadGraphImage('tempvsdepth')">Download graph</button>
+    </div>
 </div>
-
-<!-- Buttons for downloading the data as a CSV and the graph as an image -->
-<script src="{% static 'js/utils/createCsv.js' %}"></script>
-<button onclick="downloadData('tempvsdepth')">Download data</button>
-<button id="downloadImage" onclick="window.downloadGraphImage('tempvsdepth')">Download graph</button>
