--- a/geothermalsite/dashboard/templates/dashboard/navbar.html
+++ b/geothermalsite/dashboard/templates/dashboard/navbar.html
@@ -23,7 +23,7 @@
 
         <div class="ml-auto">
           <a href="https://www.carleton.edu/" target="_blank" alt="Carleton College Blue Logo">
-            <img class="logo" src="{% static 'img/Carleton-Closed-C-Ray-Wordmark-Left-Blue.png' %}" width="125" height="28">
+            <img class="logo" src="{% static 'img/Carleton_Simplified C-Ray_White.png' %}" width="45" height="45">
           </a>
         </div>
       </div>
