make left side text of daterangepicker black
still need to figure out how to make the other daterangepicker text black as well

--- a/geothermalsite/dashboard/templates/dashboard/index.html
+++ b/geothermalsite/dashboard/templates/dashboard/index.html
@@ -111,7 +111,7 @@
     </div>
 
 </div>
-
+    <link rel="stylesheet" href="{% static 'css/customdaterangepicker.css' %}">
     <script src="{% static 'js/utils/dateRangePicker.js' %}"></script>
 
     {% if type %}
