--- a/geothermalsite/dashboard/templates/dashboard/index.html
+++ b/geothermalsite/dashboard/templates/dashboard/index.html
@@ -36,7 +36,7 @@
     <div class="tab-content" id="myTabContent">
         <div class="form-container tab-pane fade show active" id="tempprofile">
             <div class="row justify-content-around">
-                <div class="col-md-8 offset-md-2">
+                <div class="col-md-8">
                     <form action="/" method="post">
                         {% csrf_token %}
                         {{ temperatureProfileForm.boreholeNumber.label }}
@@ -58,7 +58,7 @@
 
         <div class="form-container tab-pane fade" id="tempvstime">
             <div class="row justify-content-around">
-                <div class="col-md-8 offset-md-2">
+                <div class="col-md-8">
                     <form action="/" method="post">
                         {% csrf_token %}
                         {{ tempOverTimeForm.boreholeNumber.label }}
@@ -80,7 +80,7 @@
 
         <div class="form-container tab-pane fade" id="tempvsdepth">
             <div class="row justify-content-around">
-                <div class="col-md-8 offset-md-2">
+                <div class="col-md-8">
                     <form action="/" method="post">
                         {% csrf_token %}
 
