--- a/geothermalsite/dashboard/templates/dashboard/documentation.html
+++ b/geothermalsite/dashboard/templates/dashboard/documentation.html
@@ -29,6 +29,7 @@
               <h5 class="mb-0">
                 <button
                   class="btn btn-link collapsed"
+                  id="custom-btn-one"
                   data-toggle="collapse"
                   data-target="#collapseOne"
                   aria-expanded="false"
@@ -65,6 +66,7 @@
                 <h5 class="mb-0">
                   <button
                     class="btn btn-link collapsed"
+                    id="custom-btn-two"
                     data-toggle="collapse"
                     data-target="#collapseTwo"
                     aria-expanded="false"
@@ -99,6 +101,7 @@
                 <h5 class="mb-0">
                   <button
                     class="btn btn-link collapsed"
+                    id="custom-btn-three"
                     data-toggle="collapse"
                     data-target="#collapseThree"
                     aria-expanded="false"
@@ -131,6 +134,7 @@
                 <h5 class="mb-0">
                   <button
                     class="btn btn-link collapsed"
+                    id="custom-btn-four"
                     data-toggle="collapse"
                     data-target="#collapseFour"
                     aria-expanded="false"
