--- a/geothermalsite/static/css/generalSiteStyles.css
+++ b/geothermalsite/static/css/generalSiteStyles.css
@@ -2,11 +2,6 @@
 
 In particular, changing --primary-background-color and --primary-text-color
 will change those respective attributes for the entire site.
-
-Some elements that have minimal custom styling, such as the jumbotron on
-the main page, have styling in this file as well. Other elements
-that have their own css files may import this file to access the
-variables defined here as well.
 */
 
 /* Define variables for our custom color palette */
@@ -58,24 +53,6 @@ variables defined here as well.
     background-color: var(--custom-green);
 }
 
-<<<<<<< HEAD
-form {
-    margin-bottom: 20px;
-  }
-
-.left {
-    float: left;
-}
-
-.right {
-    float: left;
-}
-
-.spacer
-{
-    width: 100%;
-    height: 95px;
-=======
 /* HTML tag styles */
 body {
     font-size: 16px;
@@ -86,15 +63,12 @@ body {
 
 form {
     margin-bottom: 20px;
->>>>>>> f739d043378077fc3b144839244b53c136748021
 }
 
 label {
     margin-bottom: 10px;
 }
 
-<<<<<<< HEAD
-=======
 .left {
     float: left;
 }
@@ -108,7 +82,6 @@ label {
     width: 100%;
     height: 95px;
 }
->>>>>>> f739d043378077fc3b144839244b53c136748021
 
 #myTabContent {
     margin-top: 10px;
@@ -117,8 +90,11 @@ label {
 .submit-button {
     margin-top: 10px;
 }
-<<<<<<< HEAD
-=======
+
+/* left align all download buttons of queries with the graph*/
+.viewer {
+    position: relative;
+}
 
 /* links */
 .link, .btn-link {
@@ -134,4 +110,3 @@ so put them here rather than dedicated css files */
 .jumbotron {
     background-color: var(--primary-background-color);
 }
->>>>>>> f739d043378077fc3b144839244b53c136748021
