--- a/geothermalsite/dashboard/templates/dashboard/customquery.html
+++ b/geothermalsite/dashboard/templates/dashboard/customquery.html
@@ -1,28 +1,35 @@
 {% extends 'dashboard/base.html' %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/about.css' %}">
+<link rel="stylesheet" href="{% static 'css/customquery.css' %}">
 
 
 {% block content %}
 <body>
     <h1>Advanced API: Custom Query</h1>
     <form method="post" id="custom-query-form">
-    {% csrf_token %}
-    <p>If you're looking to be able to access the database with a bit more freedom than the predefined queries provided,
-        that option is provided here. You will need to know some SQL to get started, <u><a class="link" href="https://www.sqltutorial.org/" target="_blank">here's a good resource</a></u> if you've never
-        used SQL before.</p>
+        {% csrf_token %}
+        <p>If you're looking to be able to access the database with a bit more freedom than the predefined queries provided,
+            that option is provided here. You will need to know some SQL to get started, <u><a class="link" href="https://www.sqltutorial.org/" target="_blank">here's a good resource</a></u> if you've never
+            used SQL before.</p>
 
-    <p> INSERT SCHEMA FOR THE DB</p>
-    <label for="query">Enter A Custom Query:</label>
-    <br>
-    <textarea class="form-control" name="rawQuery" id="rawQuery" style="height: 10em; width: 80ch;">
-        {% if form.initial %}
-        {{ form.initial.rawQuery }}
-        {% else %}{{ rawQuery }}
+        <p> INSERT SCHEMA FOR THE DB</p>
+        <label for="query">Enter A Custom Query:</label>
+        <br>
+        <textarea class="form-control" name="rawQuery" id="rawQuery" style="height: 10em; width: 80ch;">
+            {% if form.initial %}
+            {{ form.initial.rawQuery }}
+            {% else %}{{ rawQuery }}
+            {% endif %}
+        </textarea>
+        <br>
+
+        {% if errorMessage %}
+            <div class="alert alert-danger" role="alert">
+                {{ errorMessage }}
+            </div>
         {% endif %}
-    </textarea>
-    <br>
-    <button class="btn btn-secondary form-control" data-toggle="modal" data-target="#exampleModal" type="submit" style="width: 80ch;">Submit</button>
+
+        <button class="btn btn-secondary form-control" data-toggle="modal" data-target="#exampleModal" type="submit" style="width: 80ch;">Submit</button>
     </form>
 
     <script>
@@ -30,40 +37,7 @@
             $('#myInput').trigger('focus')
         })
     </script>
-
-
-
-    {% if errorMessage %}
-        <div>
-            {{errorMessage}}
-        </div>
-        <!-- Button trigger modal -->
-        <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-            Launch demo modal
-        </button> -->
-
-  <!-- Modal -->
-        <!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                </div>
-                <div class="modal-body">
-                ...
-                </div>
-                <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-            </div>
-            </div>
-        </div> -->
-
-        {% endif %}
+    
     {% if queryResults %}
         <details>
             <summary>Preview Data</summary>
