--- a/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
@@ -13,7 +13,7 @@
     <canvas id="ctx"></canvas>
     <!-- Buttons for downloading the data as a CSV and the graph as an image -->
     <script src="{% static 'js/utils/createCsv.js' %}"></script>
-    <button onclick="downloadData('tempvsdepth')">Download data</button>
-    <button id="downloadImage" onclick="window.downloadGraphImage('tempvsdepth')">Download graph</button>
+    <button class="btn btn-secondary submit-button" onclick="downloadData('temp_vs_depth')">Download data</button>
+    <button class="btn btn-secondary submit-button" id="downloadImage" onclick="window.downloadGraphImage('temp_vs_depth')">Download graph</button>
     </div>
 </div>
