Temp profile tooltips and some accessibility

--- a/geothermalsite/dashboard/templates/dashboard/customquery.html
+++ b/geothermalsite/dashboard/templates/dashboard/customquery.html
@@ -25,7 +25,7 @@
         <br>
 
         {% if errorMessage %}
-            <div class="alert alert-danger" role="alert">
+            <div class="alert alert-danger" role="alert" style="width: 80ch;">
                 {{ errorMessage }}
             </div>
         {% endif %}
