added in the schema diagram

--- a/geothermalsite/dashboard/templates/dashboard/customquery.html
+++ b/geothermalsite/dashboard/templates/dashboard/customquery.html
@@ -14,7 +14,8 @@
             that option is provided here. You will need to know some SQL to get started, <u><a class="link" href="https://www.sqltutorial.org/" target="_blank">here's a good resource</a></u> if you've never
             used SQL before.</p>
 
-        <p> INSERT SCHEMA FOR THE DB</p>
+        <p> Here is the schema diagram for the database </p>
+
         <label for="query">Enter A Custom Query:</label>
         <br>
         <textarea class="form-control" name="rawQuery" id="rawQuery" style="height: 10em; width: 80ch;">
