--- a/geothermalsite/dashboard/templates/dashboard/footer.html
+++ b/geothermalsite/dashboard/templates/dashboard/footer.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="{% static 'css/footer.css' %}">
 
 <footer class="bg-info text-center text-lg-start" id="main-footer">
-    <hr>
+    <hr id="footer-line">
     <!-- Grid container -->
     <div class="container p-4">
       <!--Grid row-->
