--- a/geothermalsite/dashboard/templates/dashboard/index.html
+++ b/geothermalsite/dashboard/templates/dashboard/index.html
@@ -5,6 +5,8 @@
     {% include 'dashboard/jumbotron.html' %}
 
     {% load static %}
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
+
 
     <script>
         var outageList = {{ outageList | safe }}
@@ -20,6 +22,7 @@
     </script>
 
 <div class="col-md-6 mx-auto">
+    {# Toggle-able tabs for each query #}
     <ul class="nav nav-tabs justify-content-around" id="myTab">
         <li class="nav-item">
             <a class="nav-link active" data-toggle="tab" href="#" id="tempprofile-button" onclick="selectTab('tempprofile')">Temperature Profile</a>
@@ -33,8 +36,34 @@
     </ul>
     <script src="{% static 'js/utils/selectTab.js' %}"></script>
 
+    {# Content inside the given tab #}
     <div class="tab-content" id="myTabContent">
         <div class="form-container tab-pane fade show active" id="tempprofile">
+
+            {# Header and information about the query #}
+            <div class="row justify-content-around" id="form-information">
+                <h1>Temperature Profile</h1>
+                <p>
+                    Temperature profile plots display the temperature at different depths in a geothermal
+                    borehole over time, where the Y-axis represents the depth of the borehole, and the X-axis shows the
+                    temperature values at that depth.
+                </p>
+
+                <details>
+                    <summary>more info</summary>
+                        <div class="centered-left-list-parent">
+                            <ul class="centered-left-list">
+                                <li>Each line represents either a single day or week, depending on the range of time you've specified.</li>
+                                <li>
+                                    Querying time periods with outages may generate visualizations with unexpected contours.
+                                    Check the <u><a class="link" href="{% url 'documentation' %}">Documentation page</a></u> to see if you've queried an outage.
+                                </li>
+                            </ul>
+                        </div>
+                </details>
+            </div>
+
+            {# Temp profile form #}
             <div class="row justify-content-around">
                 <div class="col-md-8">
                     <form action="/" method="post">
@@ -47,6 +76,29 @@
         </div>
 
         <div class="form-container tab-pane fade" id="tempvstime">
+            {# Header and information about the query #}
+            <div class="row justify-content-around" id="form-information">
+                <h1>Temperature vs. Time</h1>
+                <p>
+                    Temperature vs. time plots display the temperature readings at a specific depth in a geothermal borehole
+                    over a specified period of time. The Y-axis represents temperature and the X-axis represents the dates
+                    in the given date range.
+                </p>
+
+                <details>
+                    <summary>more info</summary>
+                        <div class="centered-left-list-parent">
+                            <ul class="centered-left-list">
+                                <li>
+                                    Querying time periods with outages may generate visualizations with unexpected contours.
+                                    Check the <u><a class="link" href="{% url 'documentation' %}">Documentation page</a></u> to see if you've queried an outage.
+                                </li>
+                            </ul>
+                        </div>
+                </details>
+            </div>
+
+            {# Temp vs time form #}
             <div class="row justify-content-around">
                 <div class="col-md-8">
                     <form action="/" method="post">
@@ -59,6 +111,30 @@
         </div>
 
         <div class="form-container tab-pane fade" id="tempvsdepth">
+            {# Header and information about the query #}
+            <div class="row justify-content-around" id="form-information">
+                <h1>Temperature vs. Depth</h1>
+                <p>
+                    Temperature vs. depth plots display the temperature distribution throughout the entire depth
+                    of a geothermal borehole for a single specified date. The Y-axis represents temperature and the
+                    X-axis represents the depth of the borehole.
+                </p>
+
+                <details>
+                    <summary>more info</summary>
+                        <div class="centered-left-list-parent">
+                            <ul class="centered-left-list">
+                                <li>Each line represents either a single day or week, depending on the range of time you've specified.</li>
+                                <li>
+                                    Querying time periods with outages may generate visualizations with unexpected contours.
+                                    Check the <u><a class="link" href="{% url 'documentation' %}">Documentation page</a></u> to see if you've queried an outage.
+                                </li>
+                            </ul>
+                        </div>
+                </details>
+            </div>
+
+            {# Temp vs depth form #}
             <div class="row justify-content-around">
                 <div class="col-md-8">
                     <form action="/" method="post">
@@ -69,11 +145,10 @@
                 </div>
             </div>
         </div>
-
-
+        {# end tab content #}
     </div>
-
 </div>
+
     <link rel="stylesheet" href="{% static 'css/customdaterangepicker.css' %}">
     <script src="{% static 'js/utils/dateRangePicker.js' %}"></script>
 
@@ -92,8 +167,5 @@
     {% if type == "tempvsdepth" %}
         {% include 'dashboard/tempvsdepth.html' %}
     {% endif %}
-
-
-
 
 {% endblock %}
