Added in schema diagram under drop down

--- a/geothermalsite/dashboard/templates/dashboard/customquery.html
+++ b/geothermalsite/dashboard/templates/dashboard/customquery.html
@@ -15,8 +15,11 @@ Advanced API: Custom Query
             that option is provided here. You will need to know some SQL to get started, <u><a class="link" href="https://www.sqltutorial.org/" target="_blank">here's a good resource</a></u> if you've never
             used SQL before.</p>
 
-        <p> Here is the schema diagram for the database </p>
-
+        <details>
+            <summary>Here is the schema diagram for the database</summary>
+            <img src="{% static 'img/schema.png' %}" alt="Schema diagram for the Geothermal database" width="900" height="250">
+        </details>
+        <br>
         <label for="query">Enter A Custom Query:</label>
         <br>
         {% spaceless %}
