fixed tab distribution, fixed about/documentation page nav bar sticky position

--- a/geothermalsite/dashboard/templates/dashboard/about.html
+++ b/geothermalsite/dashboard/templates/dashboard/about.html
@@ -11,7 +11,7 @@
 <div class="container-fluid" id="about-container">
   <div class="row">
     <div class="col-2 navbar-col">
-      <div id="list-example" class="list-group">
+      <div id="list-example" class="list-group" style="position: sticky; top: 40px;">
         <a class="list-group-item list-group-item-action" href="#list-about-us">About Us</a>
         <a class="list-group-item list-group-item-action" href="#list-about-project">About the Project</a>
         <a class="list-group-item list-group-item-action" href="#list-about-geothermal">About the Geothermal Wells</a>
