--- a/geothermalsite/dashboard/static/css/documentation.css
+++ b/geothermalsite/dashboard/static/css/documentation.css
@@ -5,19 +5,21 @@
     border-color: var(--custom-green);
 }
 
-.list-group {
-    position: fixed;
-}
-
 .card-header {
     background-color: var(--primary-button-color);
 }
 
-#custom-btn-one, #custom-btn-two, #custom-btn-three, #custom-btn-four {
+#custom-btn-one,
+#custom-btn-two,
+#custom-btn-three,
+#custom-btn-four {
     color: white;
 }
 
-#collapseOne, #collapseTwo, #collapseThree, #collapseFour {
+#collapseOne,
+#collapseTwo,
+#collapseThree,
+#collapseFour {
     color: var(--custom-black);
 }
 
