--- a/geothermalsite/dashboard/templates/dashboard/documentation.html
+++ b/geothermalsite/dashboard/templates/dashboard/documentation.html
@@ -12,7 +12,7 @@
   <div class="row">
     <!-- Left-hand navbar for page contents -->
     <div class="col-2 navbar-col">
-      <div id="page-section-list" class="list-group">
+      <div id="page-section-list" class="list-group" style="position: sticky; top: 40px;">
         <a class="list-group-item list-group-item-action" href="#faq-section">FAQ</a>
         <a class="list-group-item list-group-item-action" href="#data-summary-section">Data Summary</a>
         <a class="list-group-item list-group-item-action" href="#advanced-api-section">Advanced API</a>
