Added footer line color

--- a/geothermalsite/dashboard/templates/dashboard/footer.html
+++ b/geothermalsite/dashboard/templates/dashboard/footer.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="{% static 'css/footer.css' %}">
 
 <footer class="bg-info text-center text-lg-start" id="main-footer">
-    <hr id="footer-line">
+    <hr id="footer-line" style="background-color: var(--custom-cream);">
     <!-- Grid container -->
     <div class="container p-4">
       <!--Grid row-->
