Remove inline styling of doc table

--- a/geothermalsite/dashboard/templates/dashboard/documentation.html
+++ b/geothermalsite/dashboard/templates/dashboard/documentation.html
@@ -178,8 +178,7 @@
           time will not be displayed. See below for a full table of known
           outages as of January 2023.
           <table class="table table-sm">
-              <!-- inline styling of table head for now -->
-              <thead style="background: var(--custom-green);">
+              <thead>
                 <tr>
                     <th scope ="col">Outage ID</th>
                     <th scope ="col">Channel ID</th>
