--- a/geothermalsite/dashboard/templates/dashboard/tempprofile.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempprofile.html
@@ -15,12 +15,15 @@
 <!-- Graph code and canvas for housing the graph -->
 <script src="{% static 'js/graphs/stratigraphyGraph.js' %}" type="module"></script>
 <div class="container">
-    <div class="viewer">
+    <div class="viewer" >
+    <!-- Buttons for downloading the data as a CSV and the graph as an image -->
+    <div style="margin-bottom: 1ch;">
+        <script src="{% static 'js/utils/createCsv.js' %}"></script>
+        <button class="btn btn-secondary submit-button" onclick="downloadData('temperature_profile')">Download data</button>
+        <button class="btn btn-secondary submit-button" id="downloadImage" onclick="window.downloadGraphImage('temperature_profile')">Download graph</button>
+    </div>
+
     {# the height attribute of the canvas defines how tall the graph displays on the page #}
     <canvas id="ctx" height="300"></canvas>
-    <!-- Buttons for downloading the data as a CSV and the graph as an image -->
-    <script src="{% static 'js/utils/createCsv.js' %}"></script>
-    <button class="btn btn-secondary submit-button" onclick="downloadData('temperature_profile')">Download data</button>
-    <button class="btn btn-secondary submit-button" id="downloadImage" onclick="window.downloadGraphImage('temperature_profile')">Download graph</button>
     </div>
 </div>
