--- a/geothermalsite/dashboard/templates/dashboard/tempvstime.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvstime.html
@@ -12,10 +12,13 @@
 <script src="{% static 'js/graphs/tempVsTimeGraph.js' %}" type="module"></script>
 <div class="container">
     <div class="viewer">
-    <canvas id="ctx"></canvas>
-    <!-- Buttons for downloading the data as a CSV and the graph as an image -->
-    <script src="{% static 'js/utils/createCsv.js' %}"></script>
-    <button class="btn btn-secondary submit-button" onclick="downloadData('temp_vs_time')">Download data</button>
-    <button class="btn btn-secondary submit-button"id="downloadImage" onclick="window.downloadGraphImage('temp_vs_time')">Download graph</button>
+         <!-- Buttons for downloading the data as a CSV and the graph as an image -->
+        <div class="download-btn" style="margin-bottom: 1ch;">
+            <script src="{% static 'js/utils/createCsv.js' %}"></script>
+            <button class="btn btn-secondary submit-button" onclick="downloadData('temp_vs_time')">Download data</button>
+            <button class="btn btn-secondary submit-button"id="downloadImage" onclick="window.downloadGraphImage('temp_vs_time')">Download graph</button>
+        </div>
+        <canvas id="ctx"></canvas>
+
     </div>
 </div>
