--- a/geothermalsite/dashboard/templates/dashboard/about.html
+++ b/geothermalsite/dashboard/templates/dashboard/about.html
@@ -25,11 +25,101 @@
         <p>
           We are the 2022-2023 Geothermal comps team!
         </p>
+
+        {# meet the team section #}
+        <div class="container" id="meet-the-team-section">
+          <div class="row extra-bottom-margin">
+            <div class="col-md-4">
+              <div class="card">
+                <img src="{% static 'img/schema.png' %}" alt="Alia" style="width:100%">
+                <div class="container">
+                  <h2>Alia Babinet</h2>
+                  <p class="title">CEO &amp; Founder</p>
+                  <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                  <p><button class="button">Contact</button></p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="card">
+                <img src="{% static 'img/schema.png' %}" alt="Wenlai" style="width:100%">
+                <div class="container">
+                  <h2>Wenlai Han</h2>
+                  <p class="title">Art Director</p>
+                  <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                  <p><button class="button">Contact</button></p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="card">
+                <img src="{% static 'img/schema.png' %}" alt="Emily" style="width:100%">
+                <div class="container">
+                  <h2>Emily Litton</h2>
+                  <p class="title">Designer</p>
+                  <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                  <p><button class="button">Contact</button></p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-4">
+              <div class="card">
+                <img src="{% static 'img/schema.png' %}" alt="Viktor" style="width:100%">
+                <div class="container">
+                  <h2>Viktor Chekhovoi</h2>
+                  <p class="title">Designer</p>
+                  <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                  <p><button class="button">Contact</button></p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="card">
+                <img src="{% static 'img/schema.png' %}" alt="Kelly" style="width:100%">
+                <div class="container">
+                  <h2>Kelly McGucken</h2>
+                  <p class="title">Designer</p>
+                  <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                  <p><button class="button">Contact</button></p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="card">
+                <img src="{% static 'img/schema.png' %}" alt="Henrie" style="width:100%">
+                <div class="container">
+                  <h2>Henrie Friesen</h2>
+                  <p class="title">Designer</p>
+                  <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                  <p><button class="button">Contact</button></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        {# end meet the team section #}
+
         <h4 id="list-about-project">About the Project</h4>
         <p>
             Our task was to build an interface that interacts with and displays the geothermal data for the broader Carleton community.
             To learn more about the background of the project, visit the <u><a class="link" href="https://www.cs.carleton.edu/cs_comps/2223/geo/index.php" target="_blank">Carleton computer science comps page</a></u>.
-        </p>
+
+            <br/></br>
+
+            We are very hopefuly that GeoDE can provide value to members of the Carleton community well
+            into the future! We know that there are lots of exciting ways that this site can be expanded upon, and we
+            encourage those who are interested to read more about
+            <u><a class="link" href="https://github.com/acdalal/geothermal/issues">
+              future directions and improvements for GeoDE
+            </a></u> on our repository.
+          </p>
         <h4 id="about-geothermal">About the Geothermal Wells</h4>
         <p>
             Carleton's Geothermal Well system is part of <u><a class="link" href="https://www.carleton.edu/geothermal/" target="_blank">Carleton's utility master plan</a></u>, which includes a goal of being carbon-free in 2050.
