--- a/geothermalsite/dashboard/templates/dashboard/boreholemap.html
+++ b/geothermalsite/dashboard/templates/dashboard/boreholemap.html
@@ -1,20 +1,23 @@
 {% load static %}
-<div>
-<div style="margin-bottom:0px">
-    <input type="button" class="btn info-btn" value="ⓘ" style="background-color: var(--custom-black); color: var(--custom-cream); padding:0px;">
-</div>
+<link rel="stylesheet" href="{% static 'css/boreholemap.css' %}">
+<div class="borehole-container inactive">
+    <input type="button" class="btn info-btn" value="ⓘ Borehole:">
 
-<div class="borehole-map-content" style="display:none; text-align:center;">
-    <h3>Borehole Map</h3>
-    <img src="{% static 'img/boreholes.png' %}" alt="Map of baldspot boreholes" width="80%" >
-    <p>Each B1, B2, ... , B5 represents a single borehole on the baldspot. </p>
-</div>
+    <div class="borehole-map-content">
+        <h3>Borehole Map</h3>
+        <img src="{% static 'img/boreholes.png' %}" alt="Map of baldspot boreholes" width="85%" >
+        <p>Each B1, B2, ... , B5 represents a single borehole on the baldspot. </p>
+    </div>
 
-<script type="text/javascript">
-$(document).ready(function () {
-    $(".btn.info-btn").click(function () {
-        $(".borehole-map-content").toggle();
-    });
-});
-</script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $(".btn.info-btn").click(function () {
+                $(".borehole-map-content").toggle();
+                $(".borehole-container").toggleClass('inactive');
+                $(this).val() == "ⓘ Borehole:" ? $(this).val("ⓘ") : $(this).val("ⓘ Borehole:")
+
+            });
+
+        });
+    </script>
 </div>
