About/documentation left nav change active on click

--- a/geothermalsite/dashboard/static/css/about.css
+++ b/geothermalsite/dashboard/static/css/about.css
@@ -4,6 +4,11 @@
     position: sticky;
 }
 
+.list-group-item.active {
+    background-color: var(--custom-green);
+    border-color: var(--custom-green);
+}
+
 #content-block {
     margin-left: 5%;
     margin-right: 12% !important;
