--- a/geothermalsite/dashboard/templates/dashboard/about.html
+++ b/geothermalsite/dashboard/templates/dashboard/about.html
@@ -129,7 +129,7 @@
               future directions and improvements for GeoDE
             </a></u> on our repository.
           </p>
-        <h4 id="about-geothermal">About the Geothermal Wells</h4>
+        <h4 id="list-about-geothermal">About the Geothermal Wells</h4>
         <p>
             Carleton's Geothermal Well system is part of <u><a class="link" href="https://www.carleton.edu/geothermal/" target="_blank">Carleton's utility master plan</a></u>, which includes a goal of being carbon-free in 2050.
             The data on this website pertains to the geothermal well system that was spearheaded by the Carleton Aquifer Research Lab (CARL). The Geothermal system at Carleton consists of three interconnected borefields.
@@ -140,7 +140,7 @@
             Fiber-optic cables were installed in 5 of the 134 boreholes on the Bald Spot, and the data collected by these cables is what is stored
             in the database.
         </p>
-        <h4 id="about-data">About the Data Pipeline</h4>
+        <h4 id="list-about-data">About the Data Pipeline</h4>
         <p>
             The database is maintained by Bruce Duffy, Technical Assistant of the Physics department. <strong>Every 30 minutes, measurements from each of the 5 boreholes are collected. </strong>
 
