one more addition to FAQ section

--- a/geothermalsite/dashboard/templates/dashboard/documentation.html
+++ b/geothermalsite/dashboard/templates/dashboard/documentation.html
@@ -67,7 +67,7 @@
                 >
                 <br /> <br />
                 You can customize this range of time, or choose the most recent
-                7 days, 30 days, or year's worth of data. For the temperature profile query, you can choose
+                7 days, 30 days, 3 months, or year's worth of data. For the temperature profile query, you can choose
                 a specific time point for all the temparature measurements in your chosen time range. Additionally, you have the option of
                 both metric and imperial units for all of the queries. Direct queries to the database are supported on the <u><a class="link" href="{% url 'customquery' %}">custom query page</a></u>.
               </div>
