Add link for Amy in about page

--- a/geothermalsite/dashboard/templates/dashboard/about.html
+++ b/geothermalsite/dashboard/templates/dashboard/about.html
@@ -118,6 +118,7 @@
         <h4 id="list-about-project">About the Project</h4>
         <p>
             Our task was to build an interface that interacts with and displays the geothermal data for the broader Carleton community.
+            We were advised by Prof. <u><a class="link" href="https://cs.carleton.edu/faculty/adalal/" target="_blank">Amy Csizmar Dalal</a></u>.
             To learn more about the background of the project, visit the <u><a class="link" href="https://www.cs.carleton.edu/cs_comps/2223/geo/index.php" target="_blank">Carleton computer science comps page</a></u>.
 
             <br/></br>
