Change outage table heading text to white

--- a/geothermalsite/dashboard/templates/dashboard/about.html
+++ b/geothermalsite/dashboard/templates/dashboard/about.html
@@ -123,7 +123,7 @@
 
             <br/></br>
 
-            We are very hopefuly that GeoDE can provide value to members of the Carleton community well
+            We are very hopeful that GeoDE can provide value to members of the Carleton community well
             into the future! We know that there are lots of exciting ways that this site can be expanded upon, and we
             encourage those who are interested to read more about
             <u><a class="link" href="https://github.com/acdalal/geothermal/issues">
