--- a/geothermalsite/dashboard/templates/dashboard/documentation.html
+++ b/geothermalsite/dashboard/templates/dashboard/documentation.html
@@ -192,11 +192,11 @@
           <table class="table table-sm">
               <thead>
                 <tr>
-                    <th scope ="col">Outage ID</th>
-                    <th scope ="col">Channel ID</th>
-                    <th scope ="col">Outage Type</th>
-                    <th scope ="col">Start Time</th>
-                    <th scope ="col">End Time</th>
+                    <th class="heading-text" scope ="col">Outage ID</th>
+                    <th class="heading-text" scope ="col">Channel ID</th>
+                    <th class="heading-text" scope ="col">Outage Type</th>
+                    <th class="heading-text" scope ="col">Start Time</th>
+                    <th class="heading-text" scope ="col">End Time</th>
                 </tr>
               </thead>
             <tbody>
