--- a/geothermalsite/dashboard/templates/dashboard/index.html
+++ b/geothermalsite/dashboard/templates/dashboard/index.html
@@ -58,6 +58,7 @@
                                     Querying time periods with outages may generate visualizations with unexpected contours.
                                     Check the <u><a class="link" href="{% url 'documentation' %}">Documentation page</a></u> to see if you've queried an outage.
                                 </li>
+                                <li>Queries that span large time ranges will take longer to run. Please be patient!</li>
                             </ul>
                         </div>
                 </details>
@@ -94,6 +95,7 @@
                                     Querying time periods with outages may generate visualizations with unexpected contours.
                                     Check the <u><a class="link" href="{% url 'documentation' %}">Documentation page</a></u> to see if you've queried an outage.
                                 </li>
+                                <li>Queries that span large time ranges will take longer to run. Please be patient!</li>
                             </ul>
                         </div>
                 </details>
@@ -131,6 +133,7 @@
                                     Querying time periods with outages may generate visualizations with unexpected contours.
                                     Check the <u><a class="link" href="{% url 'documentation' %}">Documentation page</a></u> to see if you've queried an outage.
                                 </li>
+                                <li>Queries that span large time ranges will take longer to run. Please be patient!</li>
                             </ul>
                         </div>
                 </details>
