set temp profile height to 100% of viewport height

--- a/geothermalsite/dashboard/templates/dashboard/tempprofile.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempprofile.html
@@ -8,10 +8,6 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.0/dist/chart.umd.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
 
-
-
-
-
 <!-- Graph code and canvas for housing the graph -->
 <script src="{% static 'js/graphs/stratigraphyGraph.js' %}" type="module"></script>
 <div class="container">
@@ -24,6 +20,6 @@
     </div>
 
     {# the height attribute of the canvas defines how tall the graph displays on the page #}
-    <canvas id="ctx" height="300"></canvas>
+    <canvas id="ctx"></canvas>
     </div>
 </div>
