Adding depth value snap warning to temp v time context

--- a/geothermalsite/dashboard/templates/dashboard/index.html
+++ b/geothermalsite/dashboard/templates/dashboard/index.html
@@ -91,6 +91,7 @@
                     <summary>more info</summary>
                         <div class="centered-left-list-parent">
                             <ul class="centered-left-list">
+                                <li>Depths in the database do not have clean integer values, so your specified depth may snap to the nearest recorded depth.</li>
                                 <li>
                                     Querying time periods with outages may generate visualizations with unexpected contours.
                                     Check the <u><a class="link" href="{% url 'documentation' %}">Documentation page</a></u> to see if you've queried an outage.
