--- a/geothermalsite/dashboard/static/css/documentation.css
+++ b/geothermalsite/dashboard/static/css/documentation.css
@@ -14,6 +14,10 @@
     background-color: var(--primary-button-color);
 }
 
+.card-header .btn:hover {
+    background-color: var(--primary-button-color);
+}
+
 #custom-btn-one,
 #custom-btn-two,
 #custom-btn-three,
