--- a/geothermalsite/dashboard/templates/dashboard/about.html
+++ b/geothermalsite/dashboard/templates/dashboard/about.html
@@ -45,7 +45,7 @@
                   <h2>Alia Babinet</h2>
                   <p class="title">CEO &amp; Founder</p>
                   <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                  <p><button class="button">Contact</button></p>
+                  <p><button class="btn">Contact</button></p>
                 </div>
               </div>
             </div>
@@ -57,7 +57,7 @@
                   <h2>Wenlai Han</h2>
                   <p class="title">Art Director</p>
                   <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                  <p><button class="button">Contact</button></p>
+                  <p><button class="btn">Contact</button></p>
                 </div>
               </div>
             </div>
@@ -69,7 +69,7 @@
                   <h2>Emily Litton</h2>
                   <p class="title">Designer</p>
                   <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                  <p><button class="button">Contact</button></p>
+                  <p><button class="btn">Contact</button></p>
                 </div>
               </div>
             </div>
@@ -83,7 +83,7 @@
                   <h2>Viktor Chekhovoi</h2>
                   <p class="title">Designer</p>
                   <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                  <p><button class="button">Contact</button></p>
+                  <p><button class="btn">Contact</button></p>
                 </div>
               </div>
             </div>
@@ -95,7 +95,7 @@
                   <h2>Kelly McGucken</h2>
                   <p class="title">Designer</p>
                   <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                  <p><button class="button">Contact</button></p>
+                  <p><button class="btn">Contact</button></p>
                 </div>
               </div>
             </div>
@@ -107,7 +107,7 @@
                   <h2>Henrie Friesen</h2>
                   <p class="title">Designer</p>
                   <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                  <p><button class="button">Contact</button></p>
+                  <p><button class="btn">Contact</button></p>
                 </div>
               </div>
             </div>
