underline GeoDE acronym on homepage

--- a/geothermalsite/dashboard/templates/dashboard/jumbotron.html
+++ b/geothermalsite/dashboard/templates/dashboard/jumbotron.html
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1 class="display-4">Welcome to GeoDE!</h1>
-    <p class="lead">A Carleton Geothermal Data Explorer developed by the Geothermal CS Comps Team, 2022-23</p>
+    <p class="lead">A Carleton <u>Geo</u>thermal <u>D</u>ata <u>E</u>xplorer developed by the Geothermal CS Comps Team, 2022-23</p>
     <hr class="my-4">
     <h2 class="display-5">Disclaimers</h2>
     <p>Carleton's geothermal database is large and complex! Here are a few things to know:</p>
